Nurbs: can't scale or rotate if odd number of vertices selected #77164

Closed
opened 2020-05-29 16:44:34 +02:00 by Diogo Valadares Reis dos Santos · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-22 20:59, hash: 86fa8dc7f7
Worked: 2.82a (at least)

Short description of error
If 3 nurbs are selected you are not able to make any transformation on them.

Exact steps for others to reproduce the error

  • Using the startup file
  • Create a curve object with nurbs
  • Enter edit mode and select 2,4, or more nurbs.
  • Try to rotate, scale them. note that it works fine
  • Select exactly 3 of them and try to rotate or scale, noting that this time it doesn't work

note: it will rotate only if the pivot is the 3d cursor

It won't rotate or scale if 3 nurbs are selected
image.png

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-22 20:59, hash: `86fa8dc7f7` Worked: 2.82a (at least) **Short description of error** If 3 nurbs are selected you are not able to make any transformation on them. **Exact steps for others to reproduce the error** - Using the startup file - Create a curve object with nurbs - Enter edit mode and select 2,4, or more nurbs. - Try to rotate, scale them. note that it works fine - Select exactly 3 of them and try to rotate or scale, noting that this time it doesn't work note: it will rotate only if the pivot is the 3d cursor It won't rotate or scale if 3 nurbs are selected ![image.png](https://archive.blender.org/developer/F8563251/image.png)

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Diogo Valadares Reis dos Santos changed title from can't rotate a specific number of nurbs to can't scale or rotate a certain number of nurbs 2020-05-29 16:50:07 +02:00
Ankit Meel changed title from can't scale or rotate a certain number of nurbs to Nurbs: can't scale or rotate if odd number of vertices selected 2020-05-30 10:31:24 +02:00
Member

Added subscribers: @ideasman42, @ankitm

Added subscribers: @ideasman42, @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@ideasman42 could it be related to this?
#76563 (Attempting to rotate curve points with Automatic handle type doesn't switch them to Aligned handle type)

@ideasman42 could it be related to this? #76563 (Attempting to rotate curve points with Automatic handle type doesn't switch them to Aligned handle type)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Yep, caused by fe0036c586, setting to High since it is a regression and we have the culprit commit.

Yep, caused by fe0036c586, setting to High since it is a regression and we have the culprit commit.
Deep Majumder self-assigned this 2020-06-04 06:04:44 +02:00

This issue was referenced by 0402cc7e9e

This issue was referenced by 0402cc7e9eb3916f7e212d546037b00abffeab4f

This issue was referenced by 733a3e3a70

This issue was referenced by 733a3e3a7072932e97859bce1b60e290baaa090d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77164
No description provided.