Fix T77164: scaling/rotation fails for 3 selected NURB points